<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_back"
        android:enabled="true"
        android:icon="@drawable/ic_arrow_back"
        android:iconTint="?themeColorForegroundElementsBackground"
        android:title="@string/back"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_drop"
        android:enabled="true"
        android:icon="@drawable/ic_delete"
        android:iconTint="?themeColorForegroundElementsBackground"
        android:title="@string/drop"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_done"
        android:enabled="true"
        android:icon="@drawable/ic_done"
        android:iconTint="?themeColorForegroundElementsBackground"
        android:title="@string/done"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>