<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_12dp"
    tools:context=".presentation.exam.setup.SetupSessionFragment">

    <TextView
        android:id="@+id/tvTestName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/base_36dp"
        android:gravity="center"
        android:scrollbars="vertical"
        android:overScrollMode="ifContentScrolls"
        android:text="@string/test_name"
        android:textAlignment="center"
        android:textAppearance="@style/TitleText"
        app:layout_constraintBottom_toTopOf="@id/tv_questions_amount_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_questions_amount_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_2dp"
        android:text="@string/number_of_questions"
        app:layout_constraintBottom_toTopOf="@id/sbQuestionsAmount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvQuestionsAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_8dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_questions_amount_hint"
        app:layout_constraintTop_toTopOf="@+id/tv_questions_amount_hint"
        tools:text="1000" />

    <SeekBar
        android:id="@+id/sbQuestionsAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_12dp"
        app:layout_constraintBottom_toTopOf="@id/switchShuffle" />

    <Switch
        android:id="@+id/switchShuffle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_12dp"
        android:text="@string/shuffle"
        app:layout_constraintBottom_toTopOf="@id/switchTimer" />

    <Switch
        android:id="@+id/switchTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_12dp"
        android:text="@string/timer"
        app:layout_constraintBottom_toTopOf="@id/tilTimer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_12dp"
            android:hint="@string/timer_input_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:visibility="visible"
            tools:ignore="Autofill" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnBack"
        style="@style/CommonButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/base_4dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNext"
        style="@style/CommonButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_4dp"
        android:background="@drawable/bg_common_button"
        android:text="@string/start_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

</androidx.constraintlayout.widget.ConstraintLayout>