<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/base_12dp"
    tools:context=".presentation.exam.results.ResultsFragment">


    <TextView
        android:id="@+id/tvResultsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:textAppearance="@style/CommonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTestName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/base_12dp"
        android:layout_marginBottom="@dimen/base_12dp"
        android:textAlignment="center"
        android:textAppearance="@style/TitleText"
        android:scrollbars="vertical"
        android:overScrollMode="ifContentScrolls"
        app:layout_constraintBottom_toTopOf="@+id/tvTimeHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultsTitle"
        tools:text="TEXT NAME" />

    <TextView
        android:id="@+id/tvTimeHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_12dp"
        android:text="@string/time_spent"
        android:textAppearance="@style/CommonText"
        app:layout_constraintEnd_toStartOf="@+id/tvTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAnswersHint"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/CommonText"
        app:layout_constraintBottom_toBottomOf="@+id/tvTimeHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTimeHint"
        app:layout_constraintTop_toTopOf="@+id/tvTimeHint"
        tools:text="0:00" />

    <TextView
        android:id="@+id/tvAnswersHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/base_12dp"
        android:text="@string/right_shown"
        android:textAppearance="@style/CommonText"
        app:layout_constraintEnd_toStartOf="@+id/tvAnswersStats"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnBack"/>

    <TextView
        android:id="@+id/tvAnswersStats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textAppearance="@style/CommonText"
        app:layout_constraintBottom_toBottomOf="@+id/tvAnswersHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvAnswersHint"
        app:layout_constraintTop_toTopOf="@+id/tvAnswersHint"
        tools:text="1/10" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_tests"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>