<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundWhite"
    android:padding="@dimen/base_8dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/dialog_width"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAlignment="center"
        android:textAppearance="@style/TitleText"
        app:layout_constraintBottom_toTopOf="@+id/tvHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_8dp"
        android:text="@string/password_verification_hint"
        android:textAlignment="center"
        android:textAppearance="@style/CommonText"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_8dp"
        app:boxStrokeColor="?themeColorAccent"
        app:hintTextColor="?themeColorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btnVerify"
        app:layout_constraintEnd_toEndOf="@+id/tvHint"
        app:layout_constraintStart_toStartOf="@+id/tvHint"
        app:layout_constraintTop_toBottomOf="@+id/tvHint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnVerify"
        style="@style/CommonButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_8dp"
        android:text="@string/verify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>